Tue Sep 22 22:54:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:
        * bin/cross_tests.lst:

          Dropped default_ Messenger tests; these have not been verified
          to be correct.

Tue Sep 22 22:34:07 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Fixes to MPC dependencies on Windows hosts.

Tue Sep 22 21:51:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Subscriber.cpp:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          DevGuideExamples updates; fixes for Windows CE builds.

Mon Sep 21 22:38:35 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Messenger:

          Introduced new Messenger test under tests to take on
          responsibilities of old DevGuideExample tests.

Mon Sep 21 22:01:47 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/Options.cpp:
        * performance-tests/Bench/src/Process.cpp:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/Subscription.cpp:

          Trevor's updates to the framework - fixed problem with
          transport creation; allow operation without publications or
          subscriptions (both are no longer required).

Fri Sep 18 19:29:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples

          DevGuideExamples updates.

Fri Sep 18 16:20:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.h: