@@ -1,8 +1,8 @@
-This is OpenDDS version 1.3, released Mon Jul 27 14:21:37 UTC 2009.
+This is OpenDDS version 2.0, released Wed Sep 23 15:56:51 UTC 2009.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 1.3
+    OpenDDS VERSION: 2.0
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
