@@ -1,4 +1,4 @@
-This is OpenDDS version 1.3, released Mon Jul 27 14:21:37 UTC 2009.
+This is OpenDDS version 2.0, released Wed Sep 23 15:56:51 UTC 2009.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
