@@ -7,7 +7,7 @@
  * See: http://www.opendds.org/license.html
  */
 
-#define DDS_MAJOR_VERSION 1
-#define DDS_MINOR_VERSION 3
+#define DDS_MAJOR_VERSION 2
+#define DDS_MINOR_VERSION 0
 #define DDS_MICRO_VERSION 0
-#define DDS_VERSION "1.3"
+#define DDS_VERSION "2.0"
