@@ -1,3 +1,7 @@
+Wed Sep 23 15:56:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * OpenDDS version 2.0 released.
+
 Tue Sep 22 22:54:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * bin/dcps_tests.lst:
